docs: feat: Add registration validation
